--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,12 @@
 /* Tablet responsive */
 @media screen and (min-width: 768px) {
-    
+    .large-col {
+        width: calc(((100% / 3) * 2) - (1.5rem / 3));
+    }
+
+    .col {
+        width: calc((100% / 3) - (1.5rem - (1.5rem / 3)));
+    }
 }
 
 /* Desktop responsive */
