--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
 .container {
     width: 100%;
     margin: 0 auto;
+    padding: 0 2rem;
 }
 
 a {
@@ -50,7 +51,7 @@ header {
     height: 100%;
     background-color: var(--blue);
     color: var(--white);
-    padding: 1rem 2rem;
+    padding: 1rem 0;
 }
 
 header .container {
@@ -77,4 +78,36 @@ header .container {
 .menu .button {
     background-color: var(--white);
     color: var(--black);
+}
+
+/* Main */
+
+/* Section 1 */
+.section-1 {
+    background-color: var(--white);
+}
+
+.section-1 .container {
+    margin: 3rem auto 5rem;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.large-col {
+    width: 100%;
+}
+
+.col {
+    width: 100%;
+}
+
+.card {
+    background-color: var(--lightblue);
+    /* debug */
+    height: 15rem;
 }
