--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,23 +4,31 @@
         width: calc(((100% / 3) * 2) - (1.5rem / 3));
     }
 
-    .col {
-        width: calc((100% / 3) - (1.5rem - (1.5rem / 3)));
+    .section-1 .col {
+        width: calc((100% / 3) - ((1.5rem / 3) * 2));
+    }
+
+    .section-1 .row:first-child {
+        margin-bottom: 1.5rem;
     }
 }
 
 /* Desktop responsive */
 @media screen and (min-width: 992px) {
     .container {
-        width: 60%;
+        width: 65%;
     }
-    
+
     .menu {
         display: block;
     }
     
     .bars {
         display: none;
+    }
+
+    .section-2 .col {
+        width: calc(50% - (1.5rem / 2));
     }
 }
 
